# cloth_opt

./: .gitignore  CMakeLists.txt  README.md  optimization.cpp  simulation.cpp  visual.cpp
include/: cloth.h  controller.h  integrator.h  mesh.h
src/: cloth.cpp  controller.cpp  integrator.cpp  mesh.cpp
